change name file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <!-- Navbar -->
     <nav data-aos="fade-down" data-aos-duration="1000">
-      <h3><a href="Portofolio.html">Farizhf.id</a></h3>
+      <h3><a href="index.html">Farizhf.id</a></h3>
       <ul class="nav-link">
-        <li id="link1" class="link"><a href="Portofolio.html">Home</a></li>
+        <li id="link1" class="link"><a href="index.html">Home</a></li>
         <li id="link2" class="link"><a href="#">Project</a></li>
         <li id="link3" class="link"><a href="#">About</a></li>
       </ul>
